--- a/src/styles/menu.scss
+++ b/src/styles/menu.scss
@@ -338,6 +338,7 @@
 
 .top-logo img {
     max-width: 180px;
+    max-height: 128px;
 }
 
 .menu-dekstop__item:hover,
@@ -362,6 +363,7 @@
 
     .top-logo img {
         max-width: 100px;
+        max-height: 70px;
     }
 
 }
@@ -422,6 +424,7 @@
 
     .top-logo img {
         max-width: 100px;
+        max-height: 70px;
     }
 
     .menu-dekstop__item,
@@ -502,6 +505,7 @@
 
     .top-logo img {
         max-width: 100px;
+        max-height: 70px;
     }
 
     .menu-dekstop__item,
@@ -584,6 +588,7 @@
 
     .top-logo img {
         max-width: 100px;
+        max-height: 70px;
     }
 }
 
@@ -605,6 +610,7 @@
 
     .top-logo img {
         max-width: 130px;
+        max-height: 92px;
     }
 
     .menu-dekstop__content {
@@ -620,6 +626,7 @@
 
     .top-logo img {
         max-width: 150px;
+        max-height: 107px;
     }
 }
 
